--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -35,7 +35,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     </div>
 </div>
 <style>
-
+  .list-ic horizontal {
+      display: flex;
+      justify-content: center;
+  }
   .list-ic li {
     position: relative;
   }
