--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -21,6 +21,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         <li><span>1</span></li>
         <li><span>2</span></li>
         <li><span>3</span></li>
+        <li><span>4</span></li>
       </ul>
     </div>
     <div class="how-work-wrapper">
