--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -32,7 +32,7 @@
             <img class="feature-img" src="{{ feature | asset_url | split: ":" | last | split: "*" | last }}" width="92" height="92" alt="">
 
           </div>
-          <script>console.log({{ feature | asset_url }})</script>
+          <script>console.log("{{ feature | asset_url }}")</script>
         
         {% endfor %}
       </div>
