--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -32,7 +32,6 @@
             <img class="feature-img" src="{{ feature  | split: ":" | last | split: "*" | last | asset_url }}" width="92" height="92" alt="">
 
           </div>
-          <script>console.log("{{ feature | asset_url }}")</script>
         
         {% endfor %}
       </div>
@@ -53,7 +52,7 @@
              {% endif %}
            </div>
            
-            <img class="feature-img" src="{{ 'thirty-day-product-chalenge-08.png' | asset_url | split: ':' | last | split: '*' | last }}" width="92" height="92" alt=""> 
+            <img class="feature-img" src="{{ feature  | split: ":" | last | split: "*" | last | asset_url }}" width="92" height="92" alt=""> 
          </div>
        
        {% endfor %}
