--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -14,7 +14,9 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
           How the 30 day challenge works:         
         </div>
         <div class="sub-text">Each week, we’ll conquer a new health habit together!</div>
-     
+       
+          <img class="grid-img" src="{{ 'thirty-day-product-grid.png' | asset_url }}" width="891" height="20" alt=""> 
+        
         </div>
     <div class="how-work-wrapper">
       {% for week in weeks %}
