--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -62,6 +62,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding-bottom: 30px;
     }
 
+    .grid-wrapper{
+      padding: 20px 50px;
+    }
+
     .how-work-wrapper {
         display: flex;
         gap: 1vw;
