--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -66,6 +66,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding: 20px 50px;
     }
 
+    .grid-img {
+      width: 76%;
+    }
+
     .how-work-wrapper {
         display: flex;
         gap: 1vw;
@@ -102,7 +106,9 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     }
 
     @media screen and (max-width: 849px) {
-        
+        .grid-wrapper {
+          display: none;
+        }
         .how-work .sub-title  {
           font-size: 28px;
           line-height: 30px;
