--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -119,6 +119,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
 
         .grid-wrapper-mb {
           display: flex;
+          justify-content: flex-start;
         }
         .how-work .sub-title  {
           font-size: 28px;
