--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -20,7 +20,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         </div>
         <div class="grid-wrapper-mb">
           <img class="grid-img-mb" src="{{ 'thirty-day-product-grid-mb.png' | asset_url }}" width="40" height="1502" alt="">
-        </div>
+        
     <div class="how-work-wrapper">
       {% for week in weeks %}
         <div class="how-work-text">
@@ -30,6 +30,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         </div>
       {% endfor %}
       
+    </div>
     </div>
 </div>
 
@@ -69,7 +70,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding: 20px 50px;
     }
 
-    .grid-wrapper-mb {
+    .grid-img-mb {
       display: none;
     }
 
