--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -118,6 +118,12 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
           display: none;
         }
 
+        .grid-img-mb {
+          display: block;
+          padding: 10px;
+          max-height: 250vw;
+        }
+
     
         .how-work .sub-title  {
           font-size: 28px;
