--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -119,7 +119,8 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         }
 
         .grid-img-mb {
-          display: block;
+          display: flex;
+          position:absolute;
           padding: 10px;
           max-height: 250vw;
         }
