--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -121,7 +121,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         .grid-img-mb {
           display: flex;
           position:absolute;
-          padding: 10px;
+          padding: 15px 10px;
           max-height: 250vw;
         }
 
