--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -70,6 +70,10 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding: 20px 50px;
     }
 
+    .grid-wrapper-mb {
+      position: relative;
+    }
+
     .grid-img-mb {
       display: none;
     }
@@ -121,8 +125,8 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         .grid-img-mb {
           display: flex;
           position:absolute;
-          padding: 15px 10px;
-          max-height: 250vw;
+          padding: 10px;
+
         }
 
     
