--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -157,7 +157,8 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         }
 
         .week-text { 
-          font-size: 19px;     
+          font-size: 17px; 
+          line-height: unset;    
         }
 
       
