--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -125,7 +125,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         .grid-img-mb {
           display: flex;
           position:absolute;
-          padding: 10px;
+          padding: 13px;
 
         }
 
@@ -157,11 +157,16 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         }
 
         .week-text { 
-          font-size: 17px; 
+          font-size: 18px; 
           line-height: unset;    
         }
 
       
+    }
+    @media screen and (max-width: 768px) {
+      .grid-img-mb {
+        padding:12px;
+      }
     }
     
 </style>
