--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -168,7 +168,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         padding:12px;
       }
     }
-    
+    @media screen and (max-width: 475px) {
+      .grid-img-mb {
+        padding:10px;
+      }
+    }
 </style>
 
 
