--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -97,6 +97,7 @@
     font-family: "PP Radio Grotesk";
     font-size: clamp(14px, 2vw, 20px);
     line-height: 20px;
+    font-weight: 400;
    
   }
 
