--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -163,7 +163,7 @@
 <script>
   videoReviewsSliderAllInOne = new Swiper('.thirty-day-video-reviews-section .swiper', {
       slidesPerView: 'auto',
-      spaceBetween: 8, 
+      {% comment %} spaceBetween: 8,  {% endcomment %}
       centeredSlides: true,
       grabCursor: true,
       slideToClickedSlide: true,
