--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -162,9 +162,8 @@
 
 <script>
   videoReviewsSliderAllInOne = new Swiper('.thirty-day-video-reviews-section .swiper', {
-      slidesPerView: 'auto',
-      {% comment %} spaceBetween: 8,  {% endcomment %}
-      centeredSlides: true,
+      slidesPerView: '1',
+      spaceBetween: 40, 
       grabCursor: true,
       slideToClickedSlide: true,
       loop: false,
