--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -163,7 +163,7 @@
 <script>
   videoReviewsSliderAllInOne = new Swiper('.thirty-day-video-reviews-section .swiper', {
       slidesPerView: '1',
-      spaceBetween: 40, 
+      spaceBetween: 8, 
       grabCursor: true,
       slideToClickedSlide: true,
       loop: false,
@@ -176,7 +176,7 @@
 </script>
 
 <script src="https://player.vimeo.com/api/player.js"></script>
-{% comment %} <script>
+ <script>
   var player1 = new Vimeo.Player(document.querySelector('#review-video-1'));
   var player2 = new Vimeo.Player(document.querySelector('#review-video-2'));
   var player3 = new Vimeo.Player(document.querySelector('#review-video-3'));
@@ -195,7 +195,7 @@
       })
     });
   });
-</script> {% endcomment %}
+</script> 
 
 <style>
   .swiper-button-prev,
