--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -135,6 +135,9 @@
 
 
   @media screen and (max-width: 768px) {
+    .review-quote {
+      margin-left: 15vw;
+    }
   .thirty-day-video-reviews-section .green-leaf {
     position: absolute;
     right: -30px;
