--- a/snippets/product-all-in-one-easy.liquid
+++ b/snippets/product-all-in-one-easy.liquid
@@ -88,7 +88,7 @@
     }
 
     .curalin-img {
-        width: 50%;
+        max-width: 50%;
     }
 
 
@@ -116,7 +116,7 @@
         }
 
         .curalin-img {
-            width: unset;
+            max-width: unset;
         }
     
       
