--- a/snippets/product-thirty-day-video-reviews.liquid
+++ b/snippets/product-thirty-day-video-reviews.liquid
@@ -135,6 +135,13 @@
 
 
   @media screen and (max-width: 768px) {
+    .thirty-day-video-reviews-section .pink-leaf {
+      display: none;
+    }
+
+    .thirty-day-video-reviews-section .green-leaf {
+     display: none;
+    }
     .review-quote {
       margin-left: 15vw;
     }
