--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -33,7 +33,8 @@
   .hero-banner .main-img {
     position: relative;
     z-index: -1;
-    right: 400px;
+    right: 460px;
+    top: 30px
   }
 
 
