--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -54,11 +54,11 @@
     padding: 43px 48px 0;
 }
   .hero-banner-content .text-button .subtitle {
-    padding-top: 30px;
+    padding-left: 85px;
     color: var(--dark-green);
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(30px, 4vw, 75px);
+    font-size: clamp(30px, 4vw, 61px);
     
   }
 
