--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -63,12 +63,13 @@
   }
 
   .hero-banner-content .text-button .text-hero {
-      padding-top: 100px;
+      padding-top: 20px;
+      padding-left: 90px;
       font-family: 'DM Sans';
       font-weight: 700;
       font-size: clamp(22px, 2vw, 25px);
       color: #FFFFFF;
-      max-width: 294px;
+      max-width: 404px;
     
   }
 
