--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -51,7 +51,7 @@
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: clamp(45px, 5vw, 115px);
-    padding: 40px 48px 0;
+    padding: 40px 0px 0px 90px;
 }
   .hero-banner-content .text-button .subtitle {
     padding-left: 85px;
