--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -4,7 +4,7 @@
       <div class="say-goodbye-content">
         <p class="goodbye">Say goodbye to <br> 
         unpredictable blood sugar levels</p>
-        <p class="say-hello">and hello to a happier, healthier you. </p>
+        <div class="say-hello">and hello to a happier, healthier you. </div>
       </div>
     </div>
   </div>
