--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -23,7 +23,8 @@
     justify-content: center;
     max-width: 800px;
     margin: auto;
-    align-items: center
+    align-items: center;
+    padding: 35px 0;
 }
 
 
