--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -162,10 +162,11 @@
     text-align: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(30px, 5vw, 60px);
+    font-size: clamp(30px, 3vw, 57px);
     line-height: 35px;
     color: white;
     padding-bottom: 30px;
+    padding-top: 25px;
  }
 
  @-webkit-keyframes pulsate {
