--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -311,6 +311,10 @@
       .timeline ul li {
         margin-left: 20px;
       }
+
+      .img-break {
+          max-width: 120%;
+      }
       .celebrate {
         right: -390px;
         max-width: 50vw;
