--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -79,6 +79,15 @@
 
 
 
+  @media screen and (max-width: 1028px) {
+    .hero-banner .main-img {
+        right: 200px;
+        width: 70%;
+    }
+  }
+
+
+
 
 
   @media screen and (max-width: 768px) {
