--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -67,7 +67,7 @@
       padding-left: 84px;
       font-family: 'DM Sans';
       font-weight: 700;
-      font-size: clamp(22px, 2vw, 28px);
+      font-size: clamp(14px, 2vw, 28px);
       color: #FFFFFF;
       max-width: 504px;
     
@@ -83,6 +83,11 @@
     .hero-banner .main-img {
         right: 200px;
         width: 70%;
+    }
+
+    .hero-banner-content .text-button .text-hero {
+      padding-top: 16px;
+      max-width: 470px;
     }
   }
 
