--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -312,6 +312,10 @@
         margin-left: 20px;
       }
 
+      .time-and-text {
+        min-width: 330px;
+      }
+
       .img-break {
           max-width: 120%;
       }
