--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -36,6 +36,7 @@
           <img class="img-break" src="{{ 'thirty-day-break-' | append: forloop.index | append: '.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
           </div>
         </li> 
+        <div class="boder-bottom-long"></div>
       {% endfor %}
       <div class="light-div"></div>
       <li>
@@ -247,6 +248,10 @@
       border-bottom: 2px solid #B9C86B;
       padding-top: 20px;
       max-width: 122px;
+    }
+
+    .border-bottom.long {
+      border-bottom: 1px solid #B9C86B;
     }
 
     .img-beyond {
