--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -10,7 +10,7 @@
  
     <ul>
       {% for week in weeks %}
-        <div class="boder-bottom-long"></div>
+        
         <li>
           <div class="wrapper-div">
           <div class="time-and-text">
@@ -203,7 +203,7 @@
       bottom: 0;
       padding: 0 10px;
       display: flex;
-      
+      border: 1px solid  #B9C86B;      
     }
 
 
@@ -250,9 +250,7 @@
       max-width: 122px;
     }
 
-    .border-bottom.long {
-      border-bottom: 1px solid #B9C86B;
-    }
+ 
 
     .img-beyond {
       padding-bottom: 10px;
