--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -136,7 +136,7 @@
 
 <style>
   .bottom-line {
-    border: 1px solid  #B9C86B; 
+    border-bottom: 1px solid  #B9C86B; 
   }
   .celebrate{
     position: absolute;
