--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -138,7 +138,8 @@
 <style>
   .bottom-line-horisontal {
     background: #B9C86B; 
-    height: 1px;
+    height: 2px;
+    width: 100%;
   }
   .celebrate{
     position: absolute;
