--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -136,7 +136,7 @@
  </style>
 
 <style>
-  .bottom-line-horisontal {
+  .bottom-line-horizontal {
     background: #B9C86B; 
     height: 2px;
     width: 100%;
