--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -138,8 +138,11 @@
 <style>
   .bottom-line-horizontal {
     background: #B9C86B; 
-    height: 2px;
-    width: 100%;
+    height: 1px;
+    width: 232%;
+    position: absolute;
+    right: -692px;
+    overflow: hidden;
   }
   .celebrate{
     position: absolute;
