--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -353,6 +353,9 @@
 
 
     @media screen and (max-width: 768px) {
+      .bottom-line-horizontal {
+        right: 0;
+      }
       .celebrate {
         position: unset;
         font-size: 18px;
