--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -354,7 +354,7 @@
 
     @media screen and (max-width: 768px) {
       .bottom-line-horizontal {
-        right: 0;
+        display: none;
       }
       .celebrate {
         position: unset;
