--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -273,7 +273,10 @@
     }
 
     .img-break-confetty {
-      max-width: 160%;
+      max-width: 226%;
+      position: relative;
+      top: -36px;
+      right: 200px;
     }
 
     .img-break-confetty-mb {
