--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -433,6 +433,13 @@
     }
   }
 
+  @media screen and (max-width: 390px) {
+  .light-div {
+    height: 210px;
+  }
+
+  }
+
   @media screen and (max-width: 323px) {
     .light-div {
       height: 225px;
