--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -417,6 +417,12 @@
       height: 172px;
     }
 
+    .img-break-confetty-mb {
+      right: -22vw;
+      top: -8vw;
+      max-height: 169px;
+    }
+
   }
 
   @media screen and (max-width: 562px) {
