--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -435,8 +435,8 @@
     }
 
     .img-break-confetty-mb {
-      max-height: 177px;
-      top: -9vw;
+      max-height: 170px;
+      right: -10vw;
     }
   }
 
