--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -105,7 +105,7 @@
       display: block;
     }
 
-    .hero-banner {
+    .hero-banner-content .text-button .main-title {
       padding: unset;
       text-align: center;
       
