--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -113,6 +113,7 @@
 
     .hero-banner-content .text-button .subtitle {
       padding-top: unset;
+      padding-left: unset;
       text-align: center;
 
     }
