--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -87,6 +87,7 @@
 
     .hero-banner-content .text-button .text-hero {
       padding-top: 16px;
+      padding-left: unset;
       max-width: 470px;
     }
   }
