--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -37,7 +37,7 @@
           </div>
          
         </li> 
-        <div class="bottom-line-horizontal"></div> 
+        {% comment %} <div class="bottom-line-horizontal"></div>  {% endcomment %}
        
       {% endfor %}
      
