--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -204,7 +204,8 @@
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
-    margin-left: 16%;
+    margin-left: 25%;
+    margin-top: -60px;
   }
 
   .cta-btn:hover {
