--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -11,7 +11,7 @@
 <section id="challenge-features-section">
   <div class="container">
     <h3>Everything you need</h3>
-    <p>to keep your blood sugar maintained:</p>
+    <div class="maintained">to keep your blood sugar maintained:</div>
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-features-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
@@ -68,7 +68,7 @@
     width: fit-content;
   }
 
-  #challenge-features-section p {
+  #challenge-features-section .maintained {
     text-align: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
@@ -229,7 +229,7 @@
       line-height: 35px;
     }
 
-    #challenge-features-section p {
+    #challenge-features-section .maintained {
       font-size: 29px;
       line-height: 24px;
     }
