--- a/snippets/product-supplement-info-section.liquid
+++ b/snippets/product-supplement-info-section.liquid
@@ -50,6 +50,10 @@
     white-space: pre-line;
   }
 
+  #info-section .description {
+    white-space: pre-line;
+  }
+
   @media screen and (max-width: 768px) {
     #info-section .main-image {
       display: none;
