--- a/snippets/product-supplement-info-section.liquid
+++ b/snippets/product-supplement-info-section.liquid
@@ -50,7 +50,7 @@
     white-space: pre-line;
   }
 
-  #info-section .description {
+  #info-section .description p {
     white-space: pre-line;
   }
 
