--- a/snippets/product-supplement-info-section.liquid
+++ b/snippets/product-supplement-info-section.liquid
@@ -50,8 +50,8 @@
     white-space: pre-line;
   }
 
-  #info-section .description p {
-    white-space: pre-line;
+  #info-section .description  {
+    white-space: pre-wrap;
   }
 
   @media screen and (max-width: 768px) {
