--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -54,7 +54,7 @@
                 <h3>{{ step.title }}</h3>
                 <div class="capsules">
                   {% for item in (1..step.capsules) %}
-                    <img src="{{ "onboarding-capsule.png" | asset_url }}" alt="Capsule Pill" loading="lazy">
+                    <img src="{{ "onboarding-gummy.png" | asset_url }}" width="20" height="31" alt="Capsule Pill" loading="lazy">
                   {% endfor %}
                 </div>
                 <p>{{ step.subtitle }}</p>
