--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -58,6 +58,7 @@
                   {% endfor %}
                 </div>
                 <p>{{ step.subtitle }}</p>
+                <p>{{ step.text }}</p>
               </div>
             {% endfor %}
           </div>
