--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -57,8 +57,8 @@
                     <img src="{{ "onboarding-gummy.png" | asset_url }}" width="20" height="31" alt="Capsule Pill" loading="lazy">
                   {% endfor %}
                 </div>
-                <p>{{ step.subtitle }}</p>
-                <p>{{ step.text }}</p>
+                <p>{{ step.subtitle }} {{ step.text }}</p>
+               
               </div>
             {% endfor %}
           </div>
