--- a/snippets/product-supplement-pack-info.liquid
+++ b/snippets/product-supplement-pack-info.liquid
@@ -57,7 +57,7 @@
                     <img src="{{ "onboarding-gummy.png" | asset_url }}" width="20" height="31" alt="Capsule Pill" loading="lazy">
                   {% endfor %}
                 </div>
-                <p>{{ step.subtitle }} {{ step.text }} {{ step.text_2 }}</p>
+                <p>{{ step.subtitle }} <br> {{ step.text }} <br> {{ step.text_2 }}</p>
                
               </div>
             {% endfor %}
