--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -53,6 +53,7 @@
 
   @media screen and (max-width: 768px){
     #back-to-top-btn {
+       text-align: center;
         width: 100%;
         border-radius: 0;
         bottom: 0;
