--- a/assets/lp-bundle.css
+++ b/assets/lp-bundle.css
@@ -471,7 +471,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
   list-style: none;
   padding: 0;
   z-index: 1; }
