--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -71,8 +71,14 @@
   }
 
   .cta-section .product-container .product-info h1 {
-    font-weight: 600;
-    font-size: 48px;
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: -0.01em;
+    color: #404733;
+
   }
 
   .cta-section .product-image-wrapper {
