--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -133,7 +133,8 @@
     }
 
     .cta-section .product-container .product-info h1 {
-      font-size: 10vw;
+      font-size: 28px;
+      line-height: 30px;
     }
 
     .multiplier {
