--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -8,7 +8,7 @@
         <p class="multiplier">X2</p>
 
         {% if isCuralinContent %}
-          <img src="{{ "product-sale-60-badge.png" | asset_url }}" alt="Curalin" class="sale-badge" loading="lazy">
+          <img src="{{ "product-sale-60-badge.png" | asset_url }}" width="200" height="200" alt="Curalin" class="sale-badge" loading="lazy">
 
           <style>
             .sale-badge {
