--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -66,7 +66,7 @@
     width: unset;
     max-width: 450px;
     grid-area: 1/2/2/3;
-    padding-bottom: 30px;
+    padding-bottom: {% if isCuralinContent %} 30px {% endif %};
   }
 
   .cta-section .product-container .product-info h1 {
