--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -48,7 +48,7 @@
   @media screen and (max-width:768px) {
     #trust-badges-widget {
       gap: unset;
-      justify-content: space-between;
+      justify-content: space-around;
     }
 
     #trust-badges-widget .container {
@@ -58,7 +58,7 @@
     }
 
     #trust-badges-widget .trust-badge {
-      font-size: 3vw;
+      font-size: 2vw;
       flex-direction: column;
       padding-bottom: unset;
     }
