--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -35,6 +35,7 @@
     align-items: center;
     text-transform: uppercase;
     max-width: {% if isMiniVersion %}50%{% else %}33%{% endif %};
+    color: rgba(0, 0, 0, 0.6);
   }
 
   #trust-badges-widget .trust-badge i {
