--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -121,6 +121,8 @@
 
     .cta-section .product-image-wrapper {
       grid-row: unset;
+      display: flex;
+      justify-content: center;
     }
 
     .cta-section .product-container .product-info {
