--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -44,6 +44,8 @@
   .product-actions {
     grid-area: 2/2/3/3;
     max-width: 450px;
+    margin-top: {% unless isCuralinContent %}-100px{% endunless %};
+
   }
 
   .product-actions .cta-title {
