--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -86,7 +86,8 @@
     .product-actions {
       grid-area: unset;
       grid-row: 3;
-      max-width: unset
+      max-width: unset;
+      margin-top: unset;
     }
 
     .submit-wrap .qty-data .qty-control {
