--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -9,10 +9,10 @@
 {% if var.title contains "CuraEats" %}
   {% assign bundle_value = challenge_value | plus: curaeats_value %}
   <div class="variant-notice"><p><b>Bonus</b> - 30 Day Life Changing Program <b>(<span class="rounded no-letters">{{ bundle_value | times: 100 | money_with_currency | replace: ".00", "" | replace: "GBP", "" | replace: "AUD", "" | replace: "CAD", "" }}</span> value)</b></p></div>
-{% else %}
-  {% assign bundle_value = 0 %}
-  {% else %}
+  {% elsif var.title contains "Sugar Challenge Bundle" %}
   <div class="variant-notice"><p><b>Special offer- Value of $185!</b></p></div>
+{% else %}
+  {% assign bundle_value = 0 %} 
 {% endif %}
 
 {% assign bottle_quantity = var.metafields.my_fields.pack_bottles_quantity %}
