--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -73,7 +73,7 @@
   }
 
   .product-actions .submit-wrap button span:first-child {
-    border-right: 1px solid white;
+  border-right: {% if isCuralinContent %} 1px solid white {% endif %};
     font-size: 130%;
   }
 
