--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -69,7 +69,7 @@
   }
 
   .product-actions .submit-wrap button span {
-    width: 50%;
+    width: {% if isCuralinContent %}50%{% endif %};
   }
 
   .product-actions .submit-wrap button span:first-child {
