--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -73,10 +73,11 @@
       font-style: normal;
       font-weight: 700;
       font-size: 22px;
-      line-height: 17px;
+      line-height: clamp(14px, 2vw, 17px);
       text-align: center;
       letter-spacing: -0.01em;
       color: #404733;
+      padding: 8px;
     }
 
     .variant-box {
