--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -72,8 +72,8 @@
       font-family: 'PP Radio Grotesk';
       font-style: normal;
       font-weight: 700;
-      font-size: 22px;
-      line-height: clamp(14px, 2vw, 17px);
+      font-size: clamp(14px, 2vw, 22px);
+      line-height: 17px;
       text-align: center;
       letter-spacing: -0.01em;
       color: #404733;
