--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -89,7 +89,7 @@
       border: 1px solid #cbcbcb;
       box-sizing: border-box;
       border-radius: 2px;
-      margin-bottom: 10px;
+      margin-bottom: {% if isCuralinContent %} 10px {% endif %};
       cursor: pointer;
       filter: drop-shadow(0px 4px 4px rgba(47, 47, 47, 0.1));
       transition: all .5s;
