--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -10,6 +10,26 @@
         {% render 'product-all-in-one-cta-section-actions-variant-box', var: var, index: forloop.index, isHighlightSubtitle: isHighlightSubtitle, isUpdateSaveTitle: true, isPricePerUnit: isPricePerUnit, challenge_value: challenge_value, curaeats_value: curaeats_value %}
       {% endif %}
     {% endfor %}
+    {% unless isCuralinContent %}
+    <div class="submit-wrap">
+      {% if isBuyQuantity %}
+        <div class="qty-data" style="display:none">
+          <div class="qty-control">
+            <a data-act="-" href="javascript:void(0)">
+              <span class="icon-minus"></span>
+            </a>
+            <label>
+              <input maxlength="4" name="quantity" type="number" value="1">
+            </label>
+            <a data-act="+" href="javascript:void(0)">
+              <span class="icon-plus"></span>
+            </a>
+          </div>
+        </div>
+      {% endif %}  
+      <button class="main-btn" id="buy-button"><span>Join the Challenge</span></button> 
+    </div>
+  {% endunless %}
   </div>
 
   {% comment %} <input id="productVaraintSelected" type="hidden" name="id" value="{{ product.variants.first.id }}"/> {% endcomment %}
@@ -31,8 +51,6 @@
     {% endif %}
     {% if isCuralinContent %}
     <button class="main-btn" id="buy-button"><span>Shop Now</span> <span class="save" id="save"></span></button>
-    {% else %}
-    <button class="main-btn" id="buy-button"><span>Join the Challenge</span></button>
   {% endif %}
   </div>
 
