--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -35,6 +35,26 @@
     <div class="variant-infos">
       <p class="subtitle">{{ var.metafields.my_fields.subtitle }}</p>
     </div>
+    {% unless isCuralinContent %}
+      <div class="submit-wrap">
+        {% if isBuyQuantity %}
+          <div class="qty-data" style="display:none">
+            <div class="qty-control">
+              <a data-act="-" href="javascript:void(0)">
+                <span class="icon-minus"></span>
+              </a>
+              <label>
+                <input maxlength="4" name="quantity" type="number" value="1">
+              </label>
+              <a data-act="+" href="javascript:void(0)">
+                <span class="icon-plus"></span>
+              </a>
+            </div>
+          </div>
+        {% endif %}  
+        <button class="main-btn" id="buy-button"><span>Join the Challenge</span></button> 
+      </div>
+    {% endunless %}
   </div>
 
   {% if isPricePerUnit %}
