--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -102,10 +102,10 @@
     }
 
     .variant-box {
-      display: flex;
-      justify-content: space-evenly;
+      display: {% if isCuralinContent %}flex{% endif %};
+      justify-content: {% if isCuralinContent %}space-evenly{% endif %};
       align-items: center;
-      height: 80px;
+      height: {% if isCuralinContent %}80px{% endif %};
       background: #fff;
       border: 1px solid #cbcbcb;
       box-sizing: border-box;
