--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -57,7 +57,23 @@
       <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</p>
     </div>
   {% endif %}
+ 
+  {% else %}
+  <div class="variant-contain">
+    <div class="variant-info">
+      <p class="variant-title">{{ var.title }}</p>
+      <div class="variant-infos">
+        <p class="subtitle">{{ var.metafields.my_fields.subtitle }}</p>
+      </div>
 
+    </div>
+    <div class="price">
+      {% if original_item_cap_total_with_bundle > var.price %}
+        <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}</strike></p>
+      {% endif %}
+      <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</p>
+    </div>
+  </div>
   {% endif %} 
   
   {% unless isCuralinContent %}
@@ -175,6 +191,10 @@
       width: 8px;
       margin-top: -4px;
       left: 4px
+    }
+
+    .variant-contain {
+      display: flex;
     }
 
     .variant-box .variant-info {
