--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -67,7 +67,7 @@
       </div>
 
     </div>
-    <div class="price">
+    <div class="price-challenge">
       {% if original_item_cap_total_with_bundle > var.price %}
         <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}</strike></p>
       {% endif %}
