--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -195,6 +195,11 @@
 
     .variant-contain {
       display: flex;
+      justify-content: space-between;
+    }
+
+    .price-challenge {
+      padding: 10px;
     }
 
     .variant-box .variant-info {
