--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -69,7 +69,7 @@
     background-color: {{ ctaColor }};
     border-color: {{ ctaColor }};
     color: white;
-    width: 100%;
+    width: {% if isCuralinContent  %} 100% {% endif %};
   }
 
   .product-actions .submit-wrap button span {
