--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -195,7 +195,7 @@
 
     .variant-contain {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
     }
 
     .price-challenge {
