--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -214,8 +214,18 @@
     }
 
     .variant-box .variant-info .variant-title {
-      margin: 0;
-      font-size: 17px;
+      font-family: 'PP Radio Grotesk';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 22px;
+      /* or 110% */
+
+      letter-spacing: -0.01em;
+
+      /* Primary/green01 */
+
+      color: #404733;
     }
 
     .variant-box .variant-info .variant-infos p {
