--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -200,6 +200,14 @@
 
     .price-challenge {
       padding: 10px;
+      font-family: 'Poppins';
+      font-weight: 700;
+      font-size: 38px;
+      line-height: 100%;
+    
+      text-align: right;
+      letter-spacing: -0.03em;
+      color: #404733;
     }
 
     .submit-wrap {
