--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -71,7 +71,7 @@
      
       <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}<sup>00</sup></p>
       
-        <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}</strike></p>
+        <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}<sup>00</sup></strike></p>
     
     </div>
   </div>
