--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -210,6 +210,12 @@
       color: #404733;
     }
 
+    .price-challenge sup {
+      font-size: 10px;
+      position: relative;
+      top: 1px;
+    }
+
     .submit-wrap {
        display: {% unless isCuralinContent %}flex{% endunless %};
        justify-content: {% unless isCuralinContent %}center{% endunless %};
