--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -210,7 +210,7 @@
       color: #404733;
     }
 
-    .price-challenge  sup {
+    .price-challenge .no-letters  sup {
       font-size: 10px;
       position: relative;
       top: 1px;
