--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -210,12 +210,12 @@
       color: #404733;
     }
 
-    .price-challenge .real-price  sup {
+      sup {
       font-size: 10px;
+      font-weight: 400;
       position: relative;
       top: 1px;
     }
-
     .submit-wrap {
        display: {% unless isCuralinContent %}flex{% endunless %};
        justify-content: {% unless isCuralinContent %}center{% endunless %};
