--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -69,7 +69,7 @@
     </div>
     <div class="price-challenge">
      
-      <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}<sup>00</sup></p>
+      <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}<sup style="font-size: 10px; position: relative; top: 1px">00</sup></p>
       
         <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}<sup style="font-size: 10px; position: relative; top: 1px">00</sup></strike></p>
     
