--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -71,7 +71,7 @@
      
       <div class="real-price rounded no-letters"><span>{{ var.price | money_without_trailing_zeros }}</span> <sup style="font-size: 10px; position: relative; top: 1px">00</sup></div>
       
-        <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}<sup style="font-size: 10px; position: relative; top: 1px">00</sup></strike></p>
+        <div class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}<sup style="font-size: 10px; position: relative; top: 1px">00</sup></strike></div>
     
     </div>
   </div>
