--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -69,7 +69,7 @@
     </div>
     <div class="price-challenge">
      
-      <div class="real-price rounded no-letters"><span>{{ var.price | money_without_trailing_zeros }}</span> <sup style="font-size: 8px;">00</sup></div>
+      <div class="real-price rounded no-letters"><b>{{ var.price | money_without_trailing_zeros }}</b> <sup>00</sup></div>
       
         <div class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}<sup style="font-size: 10px; position: relative; top: 1px">00</sup></strike></div>
     
@@ -202,7 +202,7 @@
     .price-challenge {
       padding: 10px;
       font-family: 'Poppins';
-      font-weight: 700;
+      font-weight: 400;
       font-size: 38px;
       line-height: 100%;
       text-align: right;
